@@ -20,7 +20,23 @@ Le TP s’effectuera en plusieurs étapes :
 >>   - un bloc d’au minimum 3 lignes doit précéder chaque fonction, incluant les tags @param, @return si possible
 
 
-**Bonus de points** : si vous utilisez au maximum les nouvelles techniques de balayage de tableau et de liste de Java, ainsi que les lambdas expression
+>> Configuration IntelliJ pour JavaFX (adapter pour Eclipse, Visual Studio code, ....):<br> 
+>> - Dans File -> Project Structure -> Libraries
+>>   - choisissez New Project Library (Java) et ajouter le chemin vers le dossier lib de javaFx :
+>>    -  /MonDossier/openjfx/lib
+>>   - ou chaque .jar désiré :
+>>    - /MonDossier/openjfx/lib/javafx-base-20-mac.jar
+>>    - /MonDossier/openjfx/lib/javafx-controls-20-mac.jar
+>>    - /MonDossier/openjfx/lib/javafx-graphics-20-mac.jar
+>>    - ...
+>> - **Si cela compile mais que ça ne s'exécute pas**
+>>  - modifier les paramètres de la machine virtuelle au lancement du programme
+>>    - Run -> Edit configuration -> add VM argument
+>>      - ajouter ceci : --module-path /MonDossier/libJava/javafx/lib --add-modules=javafx.controls,javafx.fxml 
+>>  - Eventuellement ajouter la variable d'environnement dans votre IDE : 
+>>    - PATH_TO_FX	-> /MonDossier/javafx/lib
+>>      - (dans IntelliJ : Preferences -> apparence -> Path Variables)
+
 
 ----
 ## TP1
